variational report and agent done

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ fitting_testing.ipynb
 recovery_analysis_run.py
 recovery_analysis.ipynb
 information_gain.ipynb
+variational_updates.ipynb
 
 resources/
 derivations/
